--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -1,7 +1,7 @@
 .homepage-container {
   text-align: center;
   padding: 20px;
-  margin-top: 100px;
+  margin-top: 50px;
   background-color: #F8FAFC;
 }
 /* Media query for mobile devices */
@@ -43,11 +43,29 @@
   font-weight: bold;
   text-shadow: 6px 6px 5px rgba(0, 0, 0, 0.3); /* Add text shadow for a shadow effect */
   letter-spacing: 2px; /* Adjust letter spacing as needed */
-  margin-top: 100px;
+  margin-top: 150px;
   margin-bottom: 100px;
 }
 @media (max-width: 767px) {
   .arriving-text {
+    margin-right: 0px;
+    margin-left: -5px;
+
+  }
+}
+
+
+.arriving-text2 {
+  font-size: 36px; /* Adjust the font size as needed */
+  text-transform: uppercase; /* Convert text to uppercase */
+  font-weight: bold;
+  text-shadow: 6px 6px 5px rgba(0, 0, 0, 0.3); /* Add text shadow for a shadow effect */
+  letter-spacing: 2px; /* Adjust letter spacing as needed */
+  margin-top: 100px;
+  margin-bottom: 00px;
+}
+@media (max-width: 767px) {
+  .arriving-text2 {
     margin-right: 0px;
     margin-left: -5px;
 
@@ -79,9 +97,25 @@
   padding: 50px 160px; /* Increase the padding to make it bigger */
   display: block;
   margin: 20px auto; /* Center the button horizontally */
-  margin-top: 200px;
+  margin-top: 50px;
   cursor: pointer;
 }
+
+.timeline-button2 {
+  background-color: black;
+  color: white;
+  border-radius: 30px;
+  font-size: 36px; /* Increase the font size to make it bigger */
+  border: 2px solid black;
+  box-shadow: 20px 20px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  padding: 50px 160px; /* Increase the padding to make it bigger */
+  display: block;
+  margin: 20px auto; /* Center the button horizontally */
+  margin-top: 50px;
+  cursor: pointer;
+  opacity: 0.3;
+}
+
 
 
 /* Homepage.css */
