--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -25,8 +25,8 @@
   background-color: #F8FAFC;
   color: black;
   /* border: 2px solid black; /* Set border style */
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+  border-top: 2px solid lightslategrey;
+  border-bottom: 2px solid lightslategrey;
   padding: 10px;
   display: flex;
   max-width: 2040px;
