--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -3,14 +3,14 @@
   background-color: white;
   color: black;
   /* border: 2px solid black; /* Set border style */
-  height: 100%;
+  height: 130%;
   top: 0;
   left: 0;
   margin-left: -40px;
   margin-right: 15px;
   bottom: 0;
   background-color: #F8FAFC;
-  border-right: 2px solid black;
+  border-right: 2px solid lightslategrey;
   z-index: 500;
   margin-top: 80px;
   width: 250px;
