--- a/frontend/my-react-app/src/PipelineSideMenu.css
+++ b/frontend/my-react-app/src/PipelineSideMenu.css
@@ -1,17 +1,19 @@
-/* PrototypeSideMenu.css */
+
+
 .pipeline-side-menu {
   background-color: white;
   color: black;
-  border: 2px solid black; /* Set border style */
-  height: 300px;
+  /* border: 2px solid black; /* Set border style */
+  height: 130%;
   top: 0;
   left: 0;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: -40px;
+  margin-right: 15px;
   bottom: 0;
+  background-color: #F8FAFC;
+  border-right: 2px solid lightslategrey;
   z-index: 500;
-  margin-top: 100px;
-  border-radius: 10px;
+  margin-top: -20px;
   width: 250px;
   padding: 20px;
   overflow-y: auto;
@@ -19,6 +21,29 @@
   transition: width 0.05s; /* Add a smooth transition effect for width changes */
   display: inline-block; /* Prevent vertical expansion */
 }
+
+.pipeline-side-menu2 {
+  background-color: white;
+  color: black;
+  /* border: 2px solid black; /* Set border style */
+  height: 130%;
+  top: 0;
+  left: 0;
+  margin-left: -40px;
+  margin-right: 15px;
+  bottom: 0;
+  background-color: #F8FAFC;
+  border-right: 2px solid lightslategrey;
+  z-index: 500;
+  margin-top: 20px;
+  width: 250px;
+  padding: 20px;
+  overflow-y: auto;
+  overflow-x: auto;
+  transition: width 0.05s; /* Add a smooth transition effect for width changes */
+  display: inline-block; /* Prevent vertical expansion */
+}
+
 
 .structureInstanceWrap{
   margin-top: 00px;
@@ -36,6 +61,27 @@
   cursor: pointer;
   padding: 2px;
   border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+.pipeline-side-menu li {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: navajowhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+
+.pipeline-side-menu2 li {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: navajowhite;
+  /* border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
 
@@ -73,6 +119,13 @@
   color: black;
 }
 
+
+.elementTitle8{
+  margin-top: 40px;
+  font-size: 20px;
+  margin-bottom: 40px;
+
+}
 /* Add dark mode styles for the homepage */
 .dark-mode {
   background-color: #333;
