--- a/frontend/my-react-app/src/PipelineSideMenu.css
+++ b/frontend/my-react-app/src/PipelineSideMenu.css
@@ -49,6 +49,30 @@
 }
 
 
+.pipeline-side-menu3 {
+  background-color: white;
+  color: black;
+  /* border: 2px solid black; /* Set border style */
+  height: 630px;
+  margin-bottom: -200px;
+  top: 0;
+  left: 0;
+  margin-left: -40px;
+  margin-right: 15px;
+  bottom: 0;
+  background-color: #F8FAFC;
+  border-right: 2px solid lightslategrey;
+  z-index: 500;
+  margin-top: 0px;
+  width: 250px;
+  padding: 20px;
+  overflow-y: auto;
+  overflow-x: auto;
+  transition: width 0.05s; /* Add a smooth transition effect for width changes */
+  display: inline-block; /* Prevent vertical expansion */
+}
+
+
 .structureInstanceWrap{
   margin-top: 00px;
   margin-left: -215px;
@@ -64,6 +88,11 @@
   padding: 0;
 }
 
+.pipeline-side-menu3 ul {
+  list-style: none;
+  padding: 0;
+}
+
 .pipeline-side-menu li {
   margin-bottom: 10px;
   font-size: 16px;
@@ -74,6 +103,16 @@
 }
 
 .pipeline-side-menu li {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: navajowhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+.pipeline-side-menu3 li {
   margin-bottom: 10px;
   font-size: 20px;
   cursor: pointer;
