--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -34,6 +34,7 @@
   margin-bottom: 20px;
 }
 
+
 .elementTitle5{
   font-size: 20px;
   margin-top: -15px;
@@ -43,7 +44,22 @@
 
 .elementTitle9{
   font-size: 20px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  margin-left: 100px;
+}
+
+
+.elementTitle11{
+  font-size: 20px;
   margin-top: 65px;
+  margin-bottom: 10px;
+  margin-left: 100px;
+}
+
+.elementTitle10{
+  font-size: 20px;
+  margin-top: 40px;
   margin-bottom: 10px;
   margin-left: 100px;
 }
