--- a/frontend/my-react-app/src/Modal.css
+++ b/frontend/my-react-app/src/Modal.css
@@ -91,6 +91,22 @@
 
 }
 
+.dropdown-button:hover {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 15px !important;
+  cursor: pointer;
+  background-color: grey;
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  z-index: 99999;
+
+}
+
+
 .dropdown-content {
   display: none;
   position: absolute;
