--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -22,6 +22,30 @@
   display: inline-block; /* Prevent vertical expansion */
 }
 
+.prototype-side-menu5 {
+  background-color: white;
+  color: black;
+  /* border: 2px solid black; /* Set border style */
+  height: 630px;
+  margin-bottom: -200px;
+  top: 0;
+  left: 0;
+  margin-left: 0px;
+  margin-right: 15px;
+  bottom: 0;
+  background-color: #F8FAFC;
+  border-right: 2px solid lightslategrey;
+  z-index: -500;
+  margin-top: 5px;
+  width: 250px;
+  padding: 20px;
+  overflow-y: auto;
+  overflow-x: auto;
+  transition: width 0.05s; /* Add a smooth transition effect for width changes */
+  display: inline-block; /* Prevent vertical expansion */
+}
+
+
 .structureInstanceWrap{
   margin-top: 00px;
   margin-left: -215px;
@@ -55,6 +79,32 @@
   /* border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
+
+.prototype-side-menu5 ul {
+  list-style: none;
+  padding: 0;
+}
+
+.prototype-side-menu5 li {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: navajowhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+.prototype-side-menu5 li:hover {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: floralwhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
 
 .sidemenu-title {
   margin-top: -15px;
