side menu selection consisten throughout

--- a/frontend/my-react-app/src/PipelineSideMenu.css
+++ b/frontend/my-react-app/src/PipelineSideMenu.css
@@ -177,7 +177,7 @@
 }
 
 .selected {
-  background-color: grey; /* Change to the desired grey color */
+  background-color: skyblue !important; /* Change to the desired grey color */
   color: black; /* Text color for the selected item */
 }
 
