--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -107,6 +107,7 @@
   position: absolute;
   top: 100%; /* Position the menu below the cell */
   left: 0;
+  overflow-y: auto;
   display: none; /* Initially, hide the menu */
   background-color: #f5f5f5; /* Subtle background color */
   border: 1px solid #ccc;
@@ -117,8 +118,12 @@
 
 .unique-menu-show .unique-popup-menu {
   display: block; /* Show the menu when .unique-show is applied to .unique-menu-container */
+  z-index: 99999;
 }
 
+.bottomButtonWrap{
+  display: flex;
+}
 .unique-menu-hide .unique-popup-menu{
   display: none;
 }
