changed dropdown color and added --- instead of tilda

--- a/frontend/my-react-app/src/Modal.css
+++ b/frontend/my-react-app/src/Modal.css
@@ -174,9 +174,9 @@
 }
 
 .dropdown-item{
-  background: black;
+  background: mediumspringgreen;
   border-radius: 5px;
-  color: white;
+  color: black;
   margin-top: 5px;
   padding-left: 5px;
   padding-right: 5px;
