--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -16,11 +16,36 @@
   margin-top: 80px;
   width: 250px;
   padding: 20px;
-  transition: background-color 0.3s ease; /* Smooth transition on hover */
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
 
   overflow-y: auto;
   overflow-x: auto;
-  transition: width 0.05s; /* Add a smooth transition effect for width changes */
+  display: inline-block; /* Prevent vertical expansion */
+}
+
+.prototype-side-menu:hover {
+  background-color: white;
+  color: black;
+  /* border: 2px solid black; /* Set border style */
+  height: 630px;
+  margin-bottom: -200px;
+  top: 0;
+  left: 0;
+  margin-left: -40px;
+  margin-right: 15px;
+  bottom: 0;
+  background-color: #F8FAFC;
+  border-right: 2px solid lightslategrey;
+  z-index: -500;
+  margin-top: 80px;
+  width: 250px;
+  padding: 20px;
+  transition: background-color 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+  overflow-y: auto;
+  overflow-x: auto;
   display: inline-block; /* Prevent vertical expansion */
 }
 
