changed the main color to light grey for root and ptotocontainer, content grid and homepage

--- a/frontend/my-react-app/src/Footer.css
+++ b/frontend/my-react-app/src/Footer.css
@@ -13,7 +13,7 @@
 
 #root {
   /* Your CSS styles for the element with id="root" go here */
-  background-color: #F8FAFC;
+  background-color: lightgrey;
   height: 100%;
   margin-top: 00px;
   /* Add more styles as needed */
