--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -251,7 +251,7 @@
 .schemaRibbon {
   display: fixed;
   justify-content: space-between;
-  background-color: #F8FAFC;
+  background-color: lightgrey;
   color: white;
   padding: 10px;
   border-radius: 5px;
