--- a/frontend/my-react-app/src/Modal.css
+++ b/frontend/my-react-app/src/Modal.css
@@ -174,7 +174,7 @@
 }
 
 .dropdown-item{
-  background: mediumspringgreen;
+  background: whitesmoke;
   border-radius: 5px;
   color: black;
   margin-top: 5px;
