--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -3,12 +3,12 @@
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   padding: 20px;
-  max-width: 1500px;
+  max-width: 1100px;
   max-height: 500px;
   overflow: auto;
-  display: flex;
-  margin-top: 40px;
-  margin-left: 50px;
+  display: block;
+  margin-top: 0px;
+  margin-left: 450px;
   border-radius: 10px;
 }
 
