associations has tree list in new component

--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -288,6 +288,14 @@
 
 }
 
+.associationsTreeWrap{
+  display: flex
+}
+
+.associationsTree{
+  display: block
+}
+
 .addrowButton{
   margin-top: 100px;
   margin-left: 20px;
