--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -73,6 +73,32 @@
   display: inline-block; /* Prevent vertical expansion */
 }
 
+
+.prototype-side-menu6 {
+  background-color: white;
+  color: black;
+  /* border: 2px solid black; /* Set border style */
+  height: 630px;
+  margin-bottom:-600px;
+  top: 0;
+  left: 0;
+  margin-left: 50px;
+  margin-right: 15px;
+  bottom: 0;
+  background-color: #F8FAFC;
+  border-right: 2px solid lightslategrey;
+  z-index: -500;
+  margin-top: 95px;
+  width: 300px;
+  padding: 20px;
+  max-height: 500px;
+  overflow-y: auto;
+  overflow-x: auto;
+  transition: width 0.05s; /* Add a smooth transition effect for width changes */
+  display: inline-block; /* Prevent vertical expansion */
+}
+
+
 .prototype-side-menu5 .additional-button {
   margin-top: 10px; /* Adjust as needed */
   margin-top: 50px;
@@ -152,6 +178,32 @@ width: 1050px;
   border-radius: 3px;
 }
 
+.prototype-side-menu6 ul {
+  list-style: none;
+  padding: 0;
+}
+
+.prototype-side-menu6 li {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: navajowhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+.prototype-side-menu6 li:hover {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  transition: background-color 0.3s ease; /* Smooth transition on hover */
+  background-color: floralwhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
 
 
 .prototype-side-menu5 ul {
@@ -181,6 +233,11 @@ width: 1050px;
 }
 
 .easy{
+  display: flex;
+  margin-left: 10px;
+}
+
+.easy2{
   display: flex;
   margin-left: 10px;
 }
