--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -4,12 +4,14 @@
   border: 1px solid #ccc;
   padding: 20px;
   max-width: 1100px;
-  max-height: 500px;
+  max-height: 470px;
   overflow: auto;
   display: block;
   margin-top: 0px;
   margin-left: 450px;
   border-radius: 10px;
+  margin-bottom: -80px;
+
 }
 
 
