--- a/frontend/my-react-app/src/Footer.css
+++ b/frontend/my-react-app/src/Footer.css
@@ -7,7 +7,7 @@
   font-size: 16px; /* Adjust the font size as needed */
   margin-top: 00px;
   bottom: 0;
-  z-index: 999;
+  z-index: 999 !important;
 }
 
 
