--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -23,6 +23,76 @@
   display: inline-block; /* Prevent vertical expansion */
 }
 
+.prototype-side-menu8 {
+  background-color: white;
+  color: black;
+  /* border: 2px solid black; /* Set border style */
+  height: 650px;
+  margin-bottom: -200px;
+  top: 0;
+  left: 0;
+  margin-left: -40px;
+  margin-right: 15px;
+  bottom: 0;
+  background-color: #F8FAFC;
+  border-right: 2px solid lightslategrey;
+  z-index: -800;
+  margin-top: 70px;
+  width: 250px;
+  padding: 20px;
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+  overflow-y: auto;
+  overflow-x: auto;
+  display: inline-block; /* Prevent vertical expansion */
+}
+
+.prototype-side-menu8:hover {
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+}
+
+
+.prototype-side-menu8 li:hover {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  transition: background-color 0.3s ease; /* Smooth transition on hover */
+
+  background-color: floralwhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+.prototype-side-menu8 ul {
+  list-style: none;
+  padding: 0;
+}
+
+.prototype-side-menu8 li {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  background-color: navajowhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+.prototype-side-menu8 li:hover {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  transition: background-color 0.3s ease; /* Smooth transition on hover */
+  background-color: floralwhite;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+
+
 .prototype-side-menu:hover {
   background-color: white;
   color: black;
@@ -71,7 +141,22 @@
   overflow-x: auto;
   transition: width 0.05s; /* Add a smooth transition effect for width changes */
   display: inline-block; /* Prevent vertical expansion */
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
 }
+
+.prototype-side-menu5:hover {
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+}
+
+.prototype-side-menu6:hover {
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+}
+
 
 
 .prototype-side-menu6 {
@@ -96,6 +181,8 @@
   overflow-x: auto;
   transition: width 0.05s; /* Add a smooth transition effect for width changes */
   display: inline-block; /* Prevent vertical expansion */
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
 }
 
 
