--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -4,14 +4,19 @@
   border: 1px solid #ccc;
   padding: 20px;
   max-width: 1100px;
-  max-height: 430px;
+  max-height: 435px;
   overflow: auto;
   display: block;
   margin-top: 0px;
   margin-left: 450px;
   border-radius: 10px;
   margin-bottom: -80px;
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+}
 
+.balance-sheet:hover {
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 
