--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -121,15 +121,14 @@
 }
 
 .modal7 {
-  position: block;
-  top: 50%; /* Center vertically */
+  position: fixed;
+  margin-top: 300px;
   left: 50%; /* Center horizontally */
   transform: translate(-50%, -50%); /* Center the modal */
   background-color: white;
   padding: 20px;
   border: 2px solid #333;
   border-radius: 5px;
-  margin-left: 850px;
   margin-top: 500px;
   height: 300px;
   z-index: 9999999 !important;
