--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -120,6 +120,11 @@
   max-width: 1200px; /* Set the maximum width of the modal */
 }
 
+.publishing{
+  font-size: 1.1em;
+  margin-left: 200px;
+}
+
 .modal7 {
   position: fixed;
   margin-top: 300px;
