--- a/frontend/my-react-app/src/Modal.css
+++ b/frontend/my-react-app/src/Modal.css
@@ -188,6 +188,18 @@
 }
 
 
+.dropdown-item2{
+  background: lightblue;
+  border-radius: 5px;
+  color: black;
+  margin-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+
 .button-space{
   margin-top: 20px;
 }
